--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ body, html {
     width: 60%;
     max-width: 700px;
     padding: 20px;
+    border: 1px solid #151515;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
     background-color: white;
     border-radius: 8px;
@@ -45,7 +46,7 @@ input[type="number"], button {
 #purchase-btn {
     background-color: #4CAF50;
     color: white;
-    border: none;
+    border: 2px solid #151515;
     cursor: pointer;
 }
 
