--- a/styles.css
+++ b/styles.css
@@ -2,7 +2,7 @@
 body, html {
     height: 100%;
     margin: 0;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: Arial, Helvetica, sans-serif;
     display: flex;
     justify-content: center;
     align-items: center;
